--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -5,7 +5,7 @@
     font-weight: 700;
     font-size:24px;
     line-height:140%;
-    color: #6B7DA1;
+        color: #046bad;
     margin-bottom: 60px;
   }
   &__row {
