--- a/src/media.scss
+++ b/src/media.scss
@@ -5,6 +5,9 @@
   .header {
     width: 1174px;
   }
+  .header__contact{
+    padding-right: 15px;
+  }
   .main__info {
     right: 25%;
     width: 1123px;
@@ -190,7 +193,7 @@
   }
   .orders__text {
     font-size: 30px;
-    padding-left: 55px;
+    padding-left: 105px;
   }
   .orders__circle {
     left: 70px;
