--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -3,7 +3,7 @@
   width: 100%;
   top: 0;
   padding: 29px 0;
-  background-color: #00000050;
+  background: rgba(0, 0, 0, 0.5);
   z-index: 3;
   &__nav {
     display: flex;
@@ -31,3 +31,5 @@
     text-decoration: none;
   }
 }
+
+
