--- a/src/media.scss
+++ b/src/media.scss
@@ -1,21 +1,80 @@
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .main__content {
-    width: 1235px;
+    width: 100%;
+    max-width: 768px;
+    height: 100vh;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .main__title {
+      font-size: 28px;
+      line-height: 30px;
+    }
+
+    .main__text {
+      margin: 12px 0 32px;
+      font-size: 14px;
+    }
+
+    .main__btn {
+      font-size: 14px;
+    }
+  }
+  .main__progress_group {
+    left: 4%;
+  }
+  .main__arrows_group {
+    right: 4%;
+    top: calc(50vh - 43px)
   }
   .wrapper{
-    margin-left:30px;
+    width: 100%;
+    max-width: 768px;
   }
   .header {
-    width: 1235px;
+    width: 100%;
+    max-width: 768px;
+    background: transparent;
   }
   .header__contact{
     padding-right: 15px;
-  }
+  } 
   .main__info {
-    right: 21%;
-    width: 1200px;
-    transform: translate(51%, 59%);
-        padding: 15px 20px 0 30px;
+    position: relative;
+    margin-top: -10%;
+    left: 15px;
+    right: 15px;
+    top: 90%;
+    display: flex;
+    width: calc(100% - 30px);
+    max-width: 768px;
+    transform: none;
+    padding: 24px 20px 0 30px;
+
+    &-left {
+      width: 50%;
+    }
+
+    &-title {
+      font-size: 18px;
+      margin-bottom: 25px;
+    }
+
+    &-list {
+      gap: 18px;
+
+      .main__info-item {
+        font-size: 14px;
+        
+      }
+    }
+
+    &-img {
+      width: 60% !important;
+      margin-left: -10%;
+    }
   }
   .main__info-item {
     font-size: 28px;
@@ -28,11 +87,12 @@
     padding-left: 30px;
   }
   .application {
-    padding: 372px 0 112px;
+    padding: 10px 0 25px;
   }
   .application__row {
-    margin-left: 45px;
-    width: 1174px;
+    // margin-left: 45px;
+    max-width: 768px;
+    width: 100%;
     padding: 15px;
     padding-right: 25px;
   }
@@ -40,54 +100,291 @@
     width: calc(50.33333% - 26.66666px);
     padding: 25px;
   }
+  .industries__text {
+    font-size: 10px;
+    word-wrap: break-word;
+    width: 100%;
+    margin: 0;
+  }
   .industries__row {
-    width: 1174px;
-    padding: 0 25px 0 65px;
+    max-width: 768px;
+    position: relative;
+    width: 100%;
+    padding: 0 15px 15px 15px;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+
+    .industries__card {
+      padding: 14px 5px;
+      width: 85px;
+      height: 112px;
+      gap: 10px;
+      
+      .industries__ing {
+        width: 50%;
+        margin-top: 14px;
+      }
+
+      &:first-child {
+        
+        .industries__ing {
+          width: 25%;
+          margin-top: 14px;
+        }
+      }
+    }
+  }
+  .industries__btn {
+    font-size: 14px !important;
+    padding: 16px 19px 16px 19px;
+    height: 112px;
+    width: 80%;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+
+    img {
+      width: auto;
+    }
   }
   .projects__row {
-    width: 1174px;
-    padding: 0 25px 0 65px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 15px 15px 15px;
+    gap: 10px;
+  }
+  .projects__card {
+    width: 85px !important;
+    height: 112px !important;
+    padding: 14px 5px;
+    width: 85px;
+    height: 112px;
+    gap: 10px;
+    text-align: center;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    .projects__img {
+      width: 50%;
+      margin-top: 14px;
+    }
+
+    &:nth-child(4) {
+        
+      .projects__img {
+        width: 30%;
+        margin-top: 14px;
+      }
+    }
+  }
+  .projects__text {
+    font-size: 10px;
+    margin: 0;
+    word-wrap: break-word;
+    width: 100%;
   }
   .projects__title {
-    font-size: 40px;
-    padding-left: 25px;
+    font-size: 28px;
+    padding: 0 15px;
   }
   .industries__title {
-    padding-left: 25px;
+    padding-left: 15px;
+    font-size: 28px;
   }
   .marking {
-    width: 1174px;
-    padding: 0 25px 0 65px;
+    max-width: 768px;
+    width: 100%;
+    padding: none;
+
+    &__title {
+      font-size: 28px;
+    }
+
+    .marking__right-title {
+      font-size: 18px;
+    }
+
+    &__list {
+      margin-left: 0;
+    }
   }
   .orders__row{
-    margin-left: 65px;
+    margin-left: 45px;
+    position: relative;
   }
   .orders {
-    padding-left: 68px;
+    max-width: 768px;
     margin-top: 45px;
-    width: 1073px;
+    width: 100%;
   }
   .orders__btn {
-    padding: 0 156px;
+    flex: 1;
+    padding: 0;
   }
   .help-container {
-    width: 1235px;
-    padding: 0 25px 0 65px;
-  }
-  .help-box {
-    padding-left: 28px;
+    max-width: 768px;
+    width: 100%;
+    padding: 0 25px 0 14px;
+
+    .help-box {
+      padding-left: 0;
+      width: 40%;
+
+      &__title {
+        font-size: 28px;
+        line-height: 28px;
+      }
+  
+      &__desc {
+        width: 438px;
+        padding-right: 100px;
+        font-size: 15px;
+        margin-bottom: 47px;
+      }
+
+      &__btn {
+        font-size: 14px;
+      }
+    }
+    .help-img {
+      width: 521px;
+    }
   }
   .first-box {
-    width: 1174px;
-    margin-left: 15px;
+    max-width: 768px;
+    width: 100%;
+    margin: 0;
+    padding: 24px 24px; 
+
+    img {
+      width: 100%;
+      margin-left: 0;
+    }
   }
   .second-box {
-    width: 1174px;
-    margin-left: 15px;
+    max-width: 768px;
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    margin-left: none;
+    padding: 0;
+    margin: 24px auto 0;
+
+    .first-child {
+      width: 50%;
+      padding: 24px 24px;
+      position: relative;
+
+      &__title {
+        font-size: 18px;
+      }
+
+      img {
+        position: absolute;
+        right: -27px;
+        width: 75%;
+        height: 75%;
+        top: 25%;
+      }
+    }
+
+    .second-child {
+      width: 50%;
+      padding: 24px 24px;
+      position: relative;
+
+      img {
+        position: absolute;
+        right: -10px;
+        width: 80%;
+        height: 100%;
+      }
+    }
   }
   .third-box {
-    width: 1174px;
-    margin-left: 15px;
+    max-width: 768px;
+    width: 100%;
+    margin: 25px 0;
+    display: flex;
+    gap: 10px;
+
+    .first-child {
+      position: relative;
+      width: 40%;
+      height: 350px;
+      margin: 0;
+      padding: 24px 24px;
+
+      &__title {
+        font-size: 18px;
+      }
+
+      &__desc {
+        font-size: 14px;
+      }
+
+      img {
+        width: 100%;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
+    }
+
+    .second-child {
+      position: relative;
+      width: 40%;
+      height: 350px;
+      margin: 0;
+      padding: 24px 24px;
+
+      &__title {
+        font-size: 18px;
+      }
+
+      &__desc {
+        font-size: 14px;
+      }
+
+      img {
+        width: 100%;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+      }
+    }
+
+    .third-child {
+      position: relative;
+      width: 25%;
+      height: 350px;
+      margin: 0;
+      padding: 24px 24px;
+
+      &__title {
+        font-size: 18px;
+      }
+
+      &__desc {
+        font-size: 14px;
+        word-break: break-word;
+        width: 100%;
+      }
+
+      img {
+        width: 100%;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        bottom: 20%;
+      }
+    }
   }
   .second-box .first-child__desc{
     font-size:15px;
@@ -95,60 +392,151 @@
   .second-box .second-child__desc{
     font-size:15px;
   }
-  .third-box .first-child__desc{
-    font-size:12px;
-  }
-  .third-box .second-child__desc{
-    font-size:15px;
-  }
-  .third-box .third-child__desc{
-    font-size:15px;
-  }
   .equipment {
-    width: 1174px;
-    padding: 0 25px 0 50px;
+    max-width: 768px;
+    width: 100%;
+    padding: 0 15px;
+
+    .container-title {
+      font-size: 28px;
+      padding: none;
+    }
+
+    button {
+      margin: 60px auto;
+    }
   }
   .footer {
-    width: 1235px;
+    max-width: 768px;
+    width: 100%;
   }
   .footer-container {
     padding: 42px;
   }
+
+  .top_btn {
+    right: 22px !important;
+  }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 481px) {
+
+  .top_btn {
+    right: 25px;
+  }
+
   .header {
     padding: 25px;
+
+    &__list {
+      display: none;
+    }
+
+    &__burder_menu {
+      display: block;
+    }
+  }
+  .main {
+    .wrapper {
+      padding: 50% 15px 0 15px;
+    }
+
+    &__title {
+      font-size: 22px;
+    }
+  }
+  .main__progress_group {
+    padding: 15px 0 70px 0;
+    margin: none;
+    position: relative;
+    display: flex;
+    align-items: center;
+    left: 0;
+
+    span {
+      padding: 0;
+    }
+
+    &-line {
+      height: 3px;
+      width: 60px;
+      margin: 0 10px;
+
+      &:nth-child(4) {
+        background: linear-gradient(to right, white 50%, #046BAD 50%);
+      }
+    }
+  }
+  .main__arrows_group {
+    margin-top: 60px;
+    padding: 0 15px;
+    position: relative;
+    flex-direction: row;
+    gap: 18px;
+    top: 0px;
+
+    img {
+      width: 30px;
+    }
   }
   .main__info {
+    margin-top: 25%;
     right: -285px;
+    flex-direction: column;
+
+    img {
+      order: -1;
+      width: 130% !important;
+      margin-top: -40%;
+    }
+
+    &-left {
+      width: 100%;
+      margin-bottom: 20px;
+    }
+
+    &-list {
+
+      .main__info-item {
+        display: flex;
+        align-items: center !important;
+        gap: 20px;
+      }
+    }
+  }
+  .application__row {
+    padding-right: 15px;
   }
   .application__card {
-    padding-left: 110px;
-    width: 1174px;
-    height: 365px;
-    margin-left: 20px;
+    padding: 16px 33px;
+    width: 100%;
+    height: auto;
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
   }
   .application__card > img {
-    width: 115px;
-    padding-top: 40px;
+    width: 64px;
   }
   .application__card-title {
-    font-size: 35px;
+    font-size: 17px;
+    font-weight: bold;
   }
   .application__card-text {
-    font-size: 30px;
+    font-size: 14px;
   }
   .application__btn {
     height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .application__btn > img {
     display: none;
   }
   .application__card-submit {
-    margin-right: 112px;
-    font-size: 30px;
-    margin-top: 10px;
+    margin: 0;
+    font-size: 14px;
   }
   .industries__title {
     padding-left: 30px;
@@ -169,35 +557,130 @@
   .industries__submit {
     font-size: 25px;
   }
+  .industries__row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .col-2 {
+    margin: 0;
+  }
+  .industries__card {
+    width: calc((100% - 20px) / 3) !important;
+    height: 200px !important;
+
+    .industries__text {
+      font-size: 14px;
+    }
+  }
+  .industries__ques {
+    font-size: 18px;
+  }
+  .industries__submit {
+    font-size: 16px;
+  }
+  .industries__btn {
+    position: relative;
+    height: 200px;
+    width: auto !important;
+    flex: 1 1;
+
+    img {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+  }
+  .projects__row {
+
+      .projects__card {
+        padding: 14px 5px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        width: calc((100% - 20px) / 3) !important;
+        height: 200px !important;
+
+        .projects__text {
+          font-size: 14px;
+        }
+      }
+  }
   .projects__title {
     width: 1174px;
   }
   .projects__text {
     font-size: 25px;
   }
+  .marking__order_left {
+    display: flex;
+    width: 100%;
+    max-width: 480px;
+
+    img {
+      width: 100%;
+      margin-left: -15px;
+    }
+  }
+  .marking__title {
+    font-size: 28px;
+    padding-right: 60px;
+    line-height: 28px;
+    margin-bottom: 20px;
+  }
   .marking__right-title {
-    font-size: 30px;
+    font-size: 16px;
+  }
+  .marking__list-item {
+    font-size: 18px;
+  }
+  .marking__attantion {
+    padding: 18px 19px;
+    margin-top: 30px;
+    flex-direction: column;
+    justify-content: start;
+    align-items: unset;
+
+    img {
+      width: 80px;
+      height: 80px;
+    }
+
+    &-text {
+      margin-top: 20px;
+      font-size: 18px;
+      line-height: 22px;
+    }
   }
   .marking__left {
     display: none;
   }
+  .marking__right-title {
+    font-size: 30px;
+  }
   .marking__right {
     width: 100%;
   }
-  .marking__list-item {
-    font-size: 25px;
-  }
-  .marking__attantion-text {
-    font-size: 23px;
+  .orders__row {
+    margin: 0;
   }
   .orders__content {
-    width: calc(110% - 30px);
-    height: 222px;
+    width: 100%;
+    height: auto;
     border-radius: 25px;
+    padding: 41px 35px 41px 180px;
+    text-align: start;
+    justify-content: start;
+
+    .orders__circle {
+      left: 40px;
+      width: 76px;
+      height: 76px;
+    }
   }
   .orders__text {
-    font-size: 30px;
-    padding-left: 105px;
+    font-size: 18px;
   }
   .orders__circle {
     left: 70px;
@@ -207,11 +690,20 @@
   .orders__btn {
     display: none;
   }
+  .help-container {
+    padding: 0 15px;
+  }
+  .help {
+    display: flex;
+    flex-direction: column;
+  }
   .help-img {
-    right: 933px;
-    top: -243px;
-    width: 600px;
-    position: relative;
+    position: absolute;
+    top: 795%;
+    left: -5%;
+    z-index: 3;
+    order: -1;
+    margin-top: -30%;
   }
   .help-box__title {
     width: 1174px;
@@ -221,59 +713,77 @@
   }
   .help-box {
     padding-left: 55px;
+    width: 100% !important;
   }
   .help-box__desc {
     font-size: 38px;
     width: 1070px;
   }
   .help-box__btn {
-    padding: 42px 355px;
+    width: 100%;
     font-size: 30px;
+    padding: 20px 0;
+    display: flex;
+    justify-content: center;
   }
   .help-box__title {
     padding-top: 150px;
   }
   .container-title {
     padding-left: 20px;
+    padding: 0;
+    line-height: 30px;
+    color: #046BAD;
+    font-size: 28px;
+    padding-right: 20px;
   }
   .first-box__title {
-    font-size: 35px;
+    font-size: 18px;
     width: 500px;
+    padding-right: 65px;
+    word-wrap: break-word;
+    width: 100%;
   }
   .second-box {
     flex-wrap: wrap;
   }
   .first-child {
-    width: 490px;
+    width: 100% !important;
+    position: relative;
   }
   .first-child > img {
-    width: 615px;
-    margin-left: 245px;
+    width: 90%;
   }
   .first-child__title {
-    font-size: 40px !important;
+    font-size: 18px;
+    width: 300px !important;
+    font-weight: bold;
   }
   .first-child__desc {
-    font-size: 25px !important;
-    width: 326px !important;
+    font-size: 19px !important;
+    width: 270px !important;
+    font-weight: 400 !important;
+    padding-right: 45px;
+    word-wrap:break-word;
+    width: 100%;
   }
   .second-child {
+    width: 100%;
     margin-top: 30px;
     width: 1118px!important;
   }
-  .second-child > div {
-    padding-left: 30px;
-    width: 300px;
-  }
   .second-child > img {
-    width: 615px !important;
-    margin-left: 245px;
+    width: 90% !important;
   }
   .second-child__title {
-    font-size: 40px !important;
+    font-size: 18px !important;
   }
   .second-child__desc {
-    font-size: 25px !important;
+    font-size: 19px !important;
+    width: 270px !important;
+    padding-right: 45px;
+    word-wrap:break-word;
+    width: 100%;
   }
   .third-box {
     flex-wrap: wrap;
@@ -281,57 +791,133 @@
   }
   .third-box > .first-child {
     height: 277px;
-     width: 1118px!important;
+
   }
   .third-box > .first-child > img {
-    position: relative;
-    bottom: 400px;
-    left: 230px;
-  }
-  .third-child__desc {
-    width: 245px;
-  }
-  .third-box > .first-child__desc {
-    width: 245px;
-  }
-  .third-box > second-child {
-    display: flex;
+    position: absolute;
+    bottom: -1px;
+    left: 157px;
   }
   .third-box .second-child {
     display: flex;
+    height: 277px;
   }
   .third-box .second-child > img {
     position: relative;
   }
   .third-box .second-child__title {
-    font-size: 45px;
+    font-size: 18px;
+    font-weight: bold;
   }
-  .third-box .second-child > div {
-    width: 600px;
+  .third-box .second-child__desc {
+    font-size: 18px;
+    font-weight: 400;
   }
   .third-box .second-child img {
     margin: 0;
+    left: -140px;
+    right: 0;
+    top: 26px;
+    width: 70% !important;
   }
   .third-box .third-child {
     display: flex;
     width: 1118px;
+    height: 277px;
     margin-top: 30px;
   }
   .third-box .third-child__title{
-    font-size:35px;
+    font-size: 18px;
+    font-weight: bold;
   }
   .third-box .third-child__desc {
-    font-size:25px;
+    font-size: 18px;
+    font-weight: 400;
+    padding-right: 240px;
+    word-wrap: break-word;
+    width: 100%;
   }
-  .third-box .third-child__desc {
-        position: relative;
-    width: 500px;
+  .third-box > .third-child > img {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    position: absolute;
+    right: -97px;
+    bottom: -8px;
+    object-fit: none;
+  }
+  .equipment button {
+    width: 100% !important;
   }
   .footer-container{
     flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    padding: 33px 15px;
+    margin: 0;
+
+    .first-child {
+      width: 50% !important;
+      
+      p {
+        width: auto !important;
+      }
+
+      ul {
+        padding: 0;
+        
+        li {
+          font-size: 17px !important;
+        }
+      }
+    }
   }
   .footer-links{
-        text-align: center;
-    margin-left: 365px;
+    flex: 1;
+    text-align: center;
+  }
+}
+
+@media (max-width: 321px) {
+
+  .main__title {
+    font-size: 20px !important;
+  }
+
+  .main {
+    .wrapper {
+      padding-top: 240px;
+
+      .main__text {
+        margin: 12px 0 15px;
+      }
+
+      .main__progress_group {
+        padding: 15px 0 30px 0;
+      }
+
+      .main__arrows_group {
+        margin-top: 30px;
+      }
+    }
+  }
+
+  .header {
+    padding: 15px 0;
+  }
+
+  .help-img {
+    width: 320px !important;
+    left: 1 !important;
+    top: 770%;
+  }
+
+  .marking__attantion {
+    margin-top: 80px;
+    padding-top: 130px;
+  }
+
+  .marking__attantion-text {
+    font-size: 16px;
   }
 }
