--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -5,6 +5,26 @@
   padding: 29px 0;
   background: rgba(0, 0, 0, 0.5);
   z-index: 3;
+
+  &__logo {
+    z-index: 5;
+    display: flex;
+    align-items: center;
+
+    span {
+      line-height: 17px;
+      font-weight: bold;
+      color: white; 
+    }
+  }
+
+  .active {
+    
+    span {
+      color: #004068;
+    }
+  }
+
   &__nav {
     display: flex;
     justify-content: space-between;
@@ -29,6 +49,55 @@
     line-height: 19px;
     color: #ffff;
     text-decoration: none;
+  }
+
+  &__burder_menu {
+    display: none;
+    z-index: 5;
+  }
+
+  .burgermenu_container {
+    width: 100%;
+    height: 60vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    display: flex;
+    align-items: center;
+
+    .menu-links {
+      position: absolute;
+      bottom: 50px;
+      left: 16px;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+
+      &__first {
+        color: #6B7DA1;
+        font-weight: 700;
+        font-size: 16px;
+        text-decoration: none;
+      }
+
+      &__second {
+        color: #6B7DA1;
+        font-weight: 400;
+        font-size: 16px;
+        text-decoration: none;
+      }
+    }
+
+    .links {
+      color: #02226C;
+      line-height: 45px;
+      font-size: 18px;
+
+      li {
+        list-style: none;
+      }
+    }
   }
 }
 
