--- a/src/components/Main/style.scss
+++ b/src/components/Main/style.scss
@@ -3,11 +3,13 @@
   &__content {
     position: relative;
     padding: 250px 100px 238px;
-   
-
-
-
   }
+
+  .wrapper {
+    padding: 0 10% 0 10%;
+    box-sizing: border-box;
+  }
+
   &__title {
     font-weight: 700;
     font-size: 48px;
@@ -62,7 +64,7 @@
     &-title {
       font-weight: 700;
       font-size: 24px;
-      line-height: 110%px;
+      line-height: 110%;
       color: #ffff;
       margin-bottom: 43px;
     }
@@ -82,4 +84,51 @@
     }
   }
 
+  &__progress_group {
+    text-align: center;
+    position: absolute;
+    top: calc(40% - 90px);
+    left: 15%;
+
+    span {
+      color: white;
+      font-weight: bold;
+      padding-bottom: 7.5px;
+      padding-top: 7.5px;
+    }
+
+    &-line {
+      margin: 0 auto;
+      height: 60px;
+      width: 2px;
+      background-color: #046BAD;
+      
+      &:nth-child(4) {
+        background: linear-gradient(to top, white 50%, #046BAD 50%);
+      }
+
+      &:nth-child(6) {
+        background-color: white;
+      }
+    }
+  }
+
+  &__arrows_group {
+    display: flex;
+    flex-direction: column;
+    gap: 54px;
+    position: absolute;
+    top: calc(50% - 90px);
+    right: 15%;
+  }
+
+  .top_btn {
+    position: fixed;
+    border-radius: 50%;
+    background-color: gray;
+    right: 10%;
+    top: 90%;
+    z-index: 999;
+    box-shadow: 1px -1px 8px 4px rgb(212, 212, 212);
+  }
 }
