--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -90,12 +90,16 @@
     }
 
     .links {
-      color: #02226C;
       line-height: 45px;
       font-size: 18px;
 
       li {
         list-style: none;
+
+        a {
+          text-decoration: none;
+          color: #02226C;
+        }
       }
     }
   }
