--- a/src/components/Main/style.scss
+++ b/src/components/Main/style.scss
@@ -126,8 +126,10 @@
     position: fixed;
     border-radius: 50%;
     background-color: gray;
-    right: 10%;
+    right: 5%;
     top: 90%;
+    height: 44px;
+    width: 44px;
     z-index: 999;
     box-shadow: 1px -1px 8px 4px rgb(212, 212, 212);
   }
