--- a/src/App.scss
+++ b/src/App.scss
@@ -4,12 +4,15 @@
   box-sizing: border-box;
   font-family: 'Manrope', sans-serif;
 }
+
+.App {
+  overflow-x: hidden;
+}
+
 .wrapper{
   width: 100%;
   max-width: 1161px;
   margin: 0 auto;
-  overflow-x: hidden;
-  overflow-y: hidden;
 }
 .container {
   width: 100%;
